--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ certifi==2018.1.18
 chardet==3.0.4
 idna==2.6
 mutagen==1.40.0
-PyQt5==5.11.3
+PyQt5>=5.12
 requests==2.20.0
 sip==4.19.8
 Unidecode==1.0.22
-urllib3==1.22
+urllib3>=1.22
